buildscript {
    repositories {
        maven { url 'https://maven.aliyun.com/repository/public/' }
        maven { url 'https://maven.aliyun.com/repository/google/' }
        maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
    }
    dependencies {
        classpath 'com.android.tools.build:gradle:3.5.4'
    }
}

plugins {
    id 'java'
}

allprojects {
    repositories {
        maven { url 'https://maven.aliyun.com/repository/public/' }
        maven { url 'https://maven.aliyun.com/repository/google/' }
        maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
        maven { url 'https://maven.aliyun.com/repository/spring/' }
        maven { url 'https://jitpack.io' }
    }
}

subprojects {
    apply plugin: 'maven-publish'
    group 'ar.ne.rcs'
    sourceCompatibility = 1.8 // java 8
    targetCompatibility = 1.8
    version = "0.0.1-SNAPSHOT"

    task sourceJar(type: Jar) {
        from sourceSets.main.allJava
        archiveClassifier = "sources"
    }


    if (!["rcs-android"].contains(project.name)) {
        println("add publiscation for $project.name")
        apply plugin: 'java'
        publishing {
            publications {
                "$project.name"(MavenPublication) {
                    from components.java
                }
            }
        }
    }
}

group = 'ar.ne.rcs'
sourceCompatibility = 1.8
targetCompatibility = 1.8

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}
